--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,15 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
     }
+
+    versionCatalogs {
+        libs {
+            from(files("./gradle/main.libs.versions.toml"))
+        }
+        custom {
+            from(files("./gradle/custom.libs.versions.toml"))
+        }
+    }
 }
 rootProject.name = "Dependency Catalog"
 include ':app'
